// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Inference: type-level rows > Record type polymorphism \\r:Row -> { foo: Num | r} 1`] = `
{
  "displays": {
    "constraints": [
      "Type ~~ Type",
      "Type ~~ ?2",
    ],
    "term": "λr -> Schema [ foo: Num | r ]",
    "type": "Π(r: Row) -> (closure: Type -| Γ: r)",
  },
}
`;

exports[`Inference: type-level rows > Record type polymorphism \\r:Row -> { foo: Num | r} 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "lvl": 0,
        "right": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "lvl": 1,
        "right": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 1,
              "type": "Meta",
              "val": 2,
            },
          },
        },
        "type": "assign",
      },
    ],
    "metas": {
      "1": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 1,
          "type": "Meta",
          "val": 1,
        },
      },
      "2": {
        "ann": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 1,
              "type": "Meta",
              "val": 1,
            },
          },
        },
        "meta": {
          "lvl": 1,
          "type": "Meta",
          "val": 2,
        },
      },
      "3": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 1,
          "type": "Meta",
          "val": 3,
        },
      },
    },
    "term": {
      "binding": {
        "annotation": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Row",
          },
        },
        "icit": "Explicit",
        "type": "Lambda",
        "variable": "r",
      },
      "body": {
        "arg": {
          "row": {
            "label": "foo",
            "row": {
              "type": "variable",
              "variable": {
                "index": 0,
                "type": "Bound",
              },
            },
            "type": "extension",
            "value": {
              "type": "Var",
              "variable": {
                "name": "Num",
                "type": "Free",
              },
            },
          },
          "type": "Row",
        },
        "func": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Schema",
          },
        },
        "icit": "Explicit",
        "type": "App",
      },
      "type": "Abs",
    },
    "type": {
      "binder": {
        "annotation": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Row",
          },
        },
        "icit": "Explicit",
        "type": "Pi",
        "variable": "r",
      },
      "closure": {
        "ctx": {
          "env": [],
          "handlers": [],
          "implicits": [],
          "metas": {},
          "sigma": {},
          "zonker": {},
        },
        "term": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "type": "Closure",
      },
      "type": "Abs",
    },
    "typedTerms": {},
  },
}
`;

exports[`Inference: type-level rows > Record value extension \\r -> { foo: Num | r} 1`] = `
{
  "displays": {
    "constraints": [
      "Type ~~ ?3",
      "?1 ~~ Schema [ | ?5 ]",
    ],
    "term": "λr -> Struct [ foo: Num | r ]",
    "type": "Π(r: ?1) -> (closure: Schema [ foo: Type | (?5 :: Row) ] -| Γ: r)",
  },
}
`;

exports[`Inference: type-level rows > Record value extension \\r -> { foo: Num | r} 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "lvl": 1,
        "right": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 1,
              "type": "Meta",
              "val": 3,
            },
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 1,
          },
        },
        "lvl": 1,
        "right": {
          "type": "Neutral",
          "value": {
            "arg": {
              "row": {
                "type": "variable",
                "variable": {
                  "lvl": 1,
                  "type": "Meta",
                  "val": 5,
                },
              },
              "type": "Row",
            },
            "func": {
              "type": "Lit",
              "value": {
                "type": "Atom",
                "value": "Schema",
              },
            },
            "icit": "Explicit",
            "type": "App",
          },
        },
        "type": "assign",
      },
    ],
    "metas": {
      "1": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 1,
        },
      },
      "2": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 1,
          "type": "Meta",
          "val": 2,
        },
      },
      "3": {
        "ann": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 1,
              "type": "Meta",
              "val": 2,
            },
          },
        },
        "meta": {
          "lvl": 1,
          "type": "Meta",
          "val": 3,
        },
      },
      "4": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 1,
          "type": "Meta",
          "val": 4,
        },
      },
      "5": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Row",
          },
        },
        "meta": {
          "lvl": 1,
          "type": "Meta",
          "val": 5,
        },
      },
    },
    "term": {
      "binding": {
        "annotation": {
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 1,
          },
        },
        "icit": "Explicit",
        "type": "Lambda",
        "variable": "r",
      },
      "body": {
        "arg": {
          "row": {
            "label": "foo",
            "row": {
              "type": "variable",
              "variable": {
                "index": 0,
                "type": "Bound",
              },
            },
            "type": "extension",
            "value": {
              "type": "Var",
              "variable": {
                "name": "Num",
                "type": "Free",
              },
            },
          },
          "type": "Row",
        },
        "func": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Struct",
          },
        },
        "icit": "Explicit",
        "type": "App",
      },
      "type": "Abs",
    },
    "type": {
      "binder": {
        "annotation": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 1,
            },
          },
        },
        "icit": "Explicit",
        "type": "Pi",
        "variable": "r",
      },
      "closure": {
        "ctx": {
          "env": [],
          "handlers": [],
          "implicits": [],
          "metas": {},
          "sigma": {},
          "zonker": {},
        },
        "term": {
          "arg": {
            "row": {
              "label": "foo",
              "row": {
                "type": "variable",
                "variable": {
                  "lvl": 1,
                  "type": "Meta",
                  "val": 5,
                },
              },
              "type": "extension",
              "value": {
                "type": "Lit",
                "value": {
                  "type": "Atom",
                  "value": "Type",
                },
              },
            },
            "type": "Row",
          },
          "func": {
            "type": "Lit",
            "value": {
              "type": "Atom",
              "value": "Schema",
            },
          },
          "icit": "Explicit",
          "type": "App",
        },
        "type": "Closure",
      },
      "type": "Abs",
    },
    "typedTerms": {},
  },
}
`;

exports[`Inference: type-level rows > Row extension: [x: Num, y: String] 1`] = `
{
  "displays": {
    "constraints": [
      "Type ~~ ?5",
      "Type ~~ ?2",
    ],
    "term": "[ y: String, x: Num ]",
    "type": "Row",
  },
}
`;

exports[`Inference: type-level rows > Row extension: [x: Num, y: String] 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "lvl": 0,
        "right": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 5,
            },
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "lvl": 0,
        "right": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 2,
            },
          },
        },
        "type": "assign",
      },
    ],
    "metas": {
      "1": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 1,
        },
      },
      "2": {
        "ann": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 1,
            },
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 2,
        },
      },
      "3": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 3,
        },
      },
      "4": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 4,
        },
      },
      "5": {
        "ann": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 4,
            },
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 5,
        },
      },
      "6": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 6,
        },
      },
    },
    "term": {
      "row": {
        "label": "y",
        "row": {
          "label": "x",
          "row": {
            "type": "empty",
          },
          "type": "extension",
          "value": {
            "type": "Var",
            "variable": {
              "name": "Num",
              "type": "Free",
            },
          },
        },
        "type": "extension",
        "value": {
          "type": "Var",
          "variable": {
            "name": "String",
            "type": "Free",
          },
        },
      },
      "type": "Row",
    },
    "type": {
      "type": "Lit",
      "value": {
        "type": "Atom",
        "value": "Row",
      },
    },
    "typedTerms": {},
  },
}
`;
